# risc0-eth-demo

./: .gitignore  Cargo.toml  README.md  test-local-deployment.sh
apps/: Cargo.toml
contracts/: Counter.sol  ERC20.sol  ICounter.sol
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
script/: Deploy.s.sol
