[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balance_of"
path = "src/bin/balance_of.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
risc0-steel = "0.11.1"

[profile.release]
lto = "thin"
